Fixes some layout issues in searchres

--- a/client/styles.css
+++ b/client/styles.css
@@ -394,6 +394,9 @@ button:active {
 
 #searchRes {
     margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     @media (max-width:1190px){
         margin-top: 250px;
     }
@@ -402,8 +405,9 @@ button:active {
 .results {
     display: flex;
     flex-wrap: wrap;
-    width: 1200;
+    width: 84vw;
     height: auto;
+    /* gap: 10px; */
     @media (max-width: 1190px){
         width: 100vw;
         /* margin-top: auto; */
@@ -422,9 +426,10 @@ h3 {
     margin-top: 12px;
     color: #FFE8C2;
     font-size: 18pt;
-    position: absolute;
-    bottom: 10px;
+    /* position: absolute; */
+    /* bottom: 80px; */
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .searchBox {
@@ -478,6 +483,7 @@ footer {
     justify-content: center;
     align-items: center;
     margin-left: -2px;
+    margin-top: 25px;
     border-top: 1px solid #6a8d73;
 }
 
